--- a/index.html
+++ b/index.html
@@ -5,12 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://unpkg.com/papercss@1.6.1/dist/paper.min.css">
-  <title>Document</title>
+  <title>Software engineer</title>
 </head>
 <body>
   <div class="paper container">
     <h1>Hello Wolrd!</h1>
-    <p>My name is Trung. Made in Vietnam</p>
-  </div>
+    <p>My name is Trung. Made in HCMC, Vietnam</p>
+    <p>"Real men use C#". I know C#</p>
+    <p>My skills: HTML, CSS, Javascript, JQuery, ReactJS, ASP .Net (Web forms, MVC, Web API, .Net Core), SQL</p>
+    <p>I can play ⚽️ and 🏓. And i love travelling.</p>
+    <p>
+        Email: <a href="mailto:trqtrung16@gmail.com">trqtrung16@gmail.com</a>
+    </p>
+</div>
 </body>
 </html>
