--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
   <div class="paper container">
-    <h1>Hello Wolrd!</h1>
+    <h3>Hello Wolrd!</h3>
+    <img src="avatar.png" loading="lazy" alt="avatar" />
     <p>My name is Trung. Made in HCMC, Vietnam</p>
     <p>"Real men use C#". I know C#</p>
     <p>My skills: HTML, CSS, Javascript, JQuery, ReactJS, ASP .Net (Web forms, MVC, Web API, .Net Core), SQL</p>
