--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
   <div class="paper container">
     <h3>Hello Wolrd!</h3>
     <img src="avatar.png" loading="lazy" alt="avatar" />
-    <p>My name is Trung. Made in HCMC, Vietnam</p>
-    <p>"Real men use C#". I know C#</p>
-    <p>My skills: HTML, CSS, Javascript, JQuery, ReactJS, ASP .Net (Web forms, MVC, Web API, .Net Core), SQL</p>
+    <p>My name is Trung. Made in Sai Gon</p>
+    <p>My skills: I can make software and stuff</p>
     <p>I can play ⚽️ and 🏓. And i love travelling.</p>
     <p>
         Email: <a href="mailto:trqtrung16@gmail.com">trqtrung16@gmail.com</a>
