--- a/index.html
+++ b/index.html
@@ -5,17 +5,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://unpkg.com/papercss@1.6.1/dist/paper.min.css">
-  <title>Software engineer</title>
+  <title>Software Developer</title>
 </head>
 <body>
   <div class="paper container">
-    <h3>Hello Wolrd!</h3>
+    <h3>Whassup 🌎!</h3>
     <img src="avatar.png" loading="lazy" alt="avatar" />
-    <p>My name is Trung. Made in Sai Gon</p>
-    <p>My skills: I can make software and stuff</p>
-    <p>I can play ⚽️ and 🏓. And i love travelling.</p>
+    <p>My name is Trung. Made in Sai Gon 1992</p>
+    <p>I can make software and stuff</p>
+    <p>A fan of ⚽️ and 🏓</p>
     <p>
         Email: <a href="mailto:trqtrung16@gmail.com">trqtrung16@gmail.com</a>
+    </p>
+    <p>
+      <a target="_blank" href="https://www.linkedin.com/in/trung-tran-294049159">More details</a>
+    </p>
+    <p>
+      <small>Last updated at 14:37 07/09/2023</small>
     </p>
 </div>
 </body>
