--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="paper container">
     <h3>Whassup 🌎!</h3>
-    <img src="avatar.png" loading="lazy" alt="avatar" />
+    <img src="avatar.png" loading="lazy" alt="avatar" style="max-width: 20rem;"/>
     <p>My name is Trung. Made in Sai Gon 1992</p>
     <p>I can make software and stuff</p>
     <p>A fan of ⚽️ and 🏓</p>
